[project]
name = "language-learning-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "langchain-core>=1.2.17",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.11",
    "spacy-transformers>=1.3.9",
    "wordfreq>=3.1.1",
]
